# SEEDOT

./: README.md
seedot/: MANIFEST.in  README.md  setup.cfg  setup.py
seedot/seedot/: SEEDOT_lexicon_electronic.txt  SEEDOT_lexicon_finance.txt  SEEDOT_lexicon_food.txt  SEEDOT_lexicon_hotel.txt  Vader.csv  seedot_procedure.py  sentiment_analyzer.py
