[metadata]
name = seedot
author = Seedot
Author-email = seedotvsvader@gmail.com
license = MIT
license-file = LICENSE.txt
url = https://github.com/SEEDOT1/SEEDOT
description = This package allow you to create your own domain oriented dictionary for sentiment analysis by using the seedot procedure, or to use one of the pre built ones (food, financial, electronic, hotel).
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
	Intended Audience :: Science/Research
	Topic :: Text Processing :: Linguistic
	Topic :: Text Processing :: General
    Topic :: Scientific/Engineering :: Artificial Intelligence
	Topic :: Scientific/Engineering :: Information Analysis
	Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Environment :: Console
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
[bdist_wheel]
universal = 1

[options]
packages = find:
include_package_data = True